feat: namings and structure